<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="kz.jibergroup.studyinn.presentation.home.HomeFragment"
        android:label="@string/main"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/catalogFragment"
        android:name="kz.jibergroup.studyinn.presentation.catalog.CatalogFragment"
        android:label="catalog_fragment"
        tools:layout="@layout/catalog_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="kz.jibergroup.studyinn.presentation.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" >
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/myCoursesFragment"
        android:name="kz.jibergroup.studyinn.presentation.my_courses.MyCoursesFragment"
        android:label="@string/my_courses"
        tools:layout="@layout/my_courses_fragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="kz.jibergroup.studyinn.presentation.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" >
        <action
            android:id="@+id/action_settingsFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_changeEmailFragment"
            app:destination="@id/changeEmailFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_aboutAppFragment"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="kz.jibergroup.studyinn.presentation.change_password.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/change_password_fragment" />
    <fragment
        android:id="@+id/changeEmailFragment"
        android:name="kz.jibergroup.studyinn.presentation.change_email.ChangeEmailFragment"
        android:label="@string/change_email"
        tools:layout="@layout/change_email_fragment" />
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="kz.jibergroup.studyinn.presentation.about_app.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/about_app_fragment" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="kz.jibergroup.studyinn.presentation.change_name.EditProfileFragment"
        android:label="@string/change_data"
        tools:layout="@layout/edit_profile_fragment" />
</navigation>