<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/itemModuleChildImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atom" />

    <TextView
        android:id="@+id/itemModuleChildTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Hello, world"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/itemModuleChildImage"
        app:layout_constraintTop_toTopOf="@+id/itemModuleChildImage" />

    <TextView
        android:id="@+id/itemModuleChildPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/point"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemModuleChildImage"
        app:layout_constraintStart_toStartOf="@+id/itemModuleChildTitle" />

    <TextView
        android:id="@+id/itemModuleChildDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/min"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemModuleChildPoint"
        app:layout_constraintStart_toEndOf="@+id/itemModuleChildPoint"
        app:layout_constraintTop_toTopOf="@+id/itemModuleChildPoint" />

    <TextView
        android:id="@+id/itemModuleChildPersonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pupil"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemModuleChildDuration"
        app:layout_constraintStart_toEndOf="@+id/itemModuleChildDuration"
        app:layout_constraintTop_toTopOf="@+id/itemModuleChildDuration" />

    <TextView
        android:id="@+id/itemModuleChildLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/like"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemModuleChildPersonCount"
        app:layout_constraintStart_toEndOf="@+id/itemModuleChildPersonCount"
        app:layout_constraintTop_toTopOf="@+id/itemModuleChildPersonCount" />
</androidx.constraintlayout.widget.ConstraintLayout>