<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_bottom_border">


        <RelativeLayout
            android:id="@+id/editProfilePhotoContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settingsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/men" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_edit_profile" />



        </RelativeLayout>

        <LinearLayout
            android:id="@+id/photoEditActionContainer"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photoEditCancell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/photoEditSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save"
                android:textSize="15sp"
                />

        </LinearLayout>
        <!--        <TextView-->
        <!--            android:id="@+id/settingName"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginTop="24dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:fontFamily="@font/roboto_regular"-->
        <!--            android:text=""-->
        <!--            android:textColor="@color/colorBlack"-->
        <!--            android:textSize="20sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/settingsImage"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/settingsImage" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsEmailChangeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/change_email"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsDataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsNameChangeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/change_data"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsPasswordChangeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsPasswordChangeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text="**********"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/change_password"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/settingsLangContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/language"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/settingsLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text=""
            android:textSize="15sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/settingsAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/about_app"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/settingsHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/help"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/settingsLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_border"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/logout"
        android:textColor="@color/colorRed"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>