<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.review_dialog.ReviewDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_bottom_border">


        <ImageView
            android:id="@+id/reviewRemove"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_remove_sign"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/write_your_review"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reviewRemove"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/reviewImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/men"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileUsername" />


        <TextView
            android:id="@+id/reviewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Jhon Jones"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditBtn" />


        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/reviewRatingStars"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/colorYellow"
            android:secondaryProgressTint="@color/colorDark"
            android:rating="0" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/reviewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="120dp"
            android:hint="@string/write_here"
            android:padding="8dp"
            android:background="@drawable/shape_corner_rect"/>

        <TextView
            android:id="@+id/reviewTextError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/required_field"
            android:textSize="12sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviewSubmit"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="8dp" />


    </LinearLayout>
</LinearLayout>