<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.change_name.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_input_layout_background"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/name_hint"
                android:paddingTop="5.6dp"
                android:textColorHint="#979797">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:hint=""
                    android:inputType="text|textNoSuggestions"
                    android:longClickable="false"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textColorHint="#979797"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/nameErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lastNameBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_input_layout_background">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:hint="@string/lastname_hint"
                android:paddingTop="5.6dp"
                android:textColorHint="#979797">

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:inputType="text|textNoSuggestions"
                    android:longClickable="false"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textColorHint="#979797"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lastnameErrorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/ediProfileSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="8dp" />


    </LinearLayout>

</RelativeLayout>